# TinyCitySim

./: .gitignore  CMakeLists.txt  README.md
.cursor/: hook-test-broken.json
shaders/: ChickenPixel.hlsl  ChickenVertex.hlsl  TilePixel.hlsl  TileVertex.hlsl
src/: Application.cpp  Application.h  Chicken.cpp  Chicken.h  ChickenRenderer.cpp  ChickenRenderer.h  ChickenSpriteAtlas.cpp  ChickenSpriteAtlas.h  D3D11Context.cpp  D3D11Context.h  GardenGenerator.cpp  GardenGenerator.h  GardenTile.h  GrassSimulation.cpp  GrassSimulation.h  InputHandler.cpp  InputHandler.h  LogPanel.cpp  LogPanel.h  ModernCppGuide.h  OrthoMath.h  Platform.h  ProceduralChickenSprite.cpp  ProceduralChickenSprite.h  ProceduralTileTexture.cpp  ProceduralTileTexture.h  TileGrid.cpp  TileGrid.h  TileRenderer.cpp  TileRenderer.h  TileTextureAtlas.cpp  TileTextureAtlas.h  Walkability.h  Window.cpp  Window.h  main.cpp
